# ProxCEMP

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  MUJOCO_LOG.TXT  README.md  activate.sh  config_editor_tkinter.py  install_ros.sh  motion_planner.py  planned_path.pkl  requirements.txt  robot_configs.pkl  setup.sh  view_trajectory.py
2Dexamples/: CMakeLists.txt  benchmark_results.csv  benchmark_summary.txt  run_stats.py  stats_results.pkl
2Dexamples/configs/: config.yaml
2Dexamples/include/: ForwardKinematics.h  MotionPlanner.h  NGDMotionPlanner.h  ObstacleMap.h  PCEMotionPlanner.h  STOMPMotionPlanner.h  Trajectory.h  visualization.h  visualization_base.h
2Dexamples/src/: MotionPlanner.cpp  ObstacleMap.cpp  Trajectory.cpp  cart_pole.cpp  config.yaml  main.cpp  main3d.cpp  main_mute.cpp  test_solvers.cpp  visualize_collision.cpp  visualize_collision3d.cpp  visualize_collision_checking.cpp  visualize_noisy_trj.cpp  visualize_noisy_trj3d.cpp
2Dexamples/tests/: CMakeLists.txt  config.yaml  test_determinism.cpp  test_utils.h
3Dexamples/: CMakeLists.txt
3Dexamples/configs/: config.yaml
3Dexamples/src/: main.cpp  visualize3D.cpp  visualize_noisy_trj.cpp
Examples2d3d/: CMakeLists.txt  benchmark_results.pkl  stats_results.pkl
Examples2d3d/configs/: config copy.yaml  config.yaml  config_3d.yaml  solverbench_config.yaml
Examples2d3d/figures/: benchmark_table.tex
Examples2d3d/scripts/: plot_bars.py  plot_cvars.py  run_stats.py
Examples2d3d/src/: MotionPlannerVisualization.cpp  main.cpp  main3d.cpp  main_casadi.cpp  main_casadi3d.cpp  main_stomp.cpp  main_stomp3d.cpp  stomp_standalone_test  stomp_standalone_test.cpp  test_R.cpp  visualize_collision.cpp  visualize_collision3d.cpp  visualize_noisy_trj.cpp  visualize_noisy_trj3d.cpp
ProxCE_planner/: CMakeLists.txt  mbm_results.db  package.xml  prox_ce_planner_plugin.xml  prox_ce_planning.yaml  run_mpbenchmarks.sh  visualize_mbm_tasks.sh
ProxCE_planner/include/: prox_ce_planner.h
ProxCE_planner/src/: prox_ce_planner.cpp
StompTest/: CMakeLists.txt  stomp_test.cpp
benchmarking/: benchmark.db
cmake/: PCEMotionPlannerConfig.cmake.in
configs/: config.yaml
examples/: CartPoleTask.h  CasadiCollisionTask.h  CollisionAvoidanceTask.h  ObstacleMap.h  OptimizationVisualizer.h  StompTask.h  StompTaskMinimal.h  TestTask.h  collision_utils.h  visualization3d_base.h
include/: CasadiMotionPlanner.h  CollisionAvoidanceTask.h  ConvexCosts.h  ForwardKinematics.h  IterationData.h  MotionPlanner.h  NGDMotionPlanner.h  ObstacleMap.h  OptimizationVisualizer.h  PCEMotionPlanner copy.h  PCEMotionPlanner.h  STOMPMotionPlanner.h  StompMotionPlanner.h  Trajectory.h  TrajectoryComparison.h  collision_utils.h  task.h  visualization.h  visualization3d.h  visualization_base.h
models/: quadrotor.xml
moveIt2_plugin/pcem_planner/: CMakeLists.txt  package.xml  pcem_planner_plugin_description.xml
moveIt2_plugin/pcem_planner/include/pcem_planner/: pcem_optimizer.hpp  pcem_planning_context.hpp
moveIt2_plugin/pcem_planner/src/: pcem_optimizer.cpp  pcem_planner_manager.cpp  pcem_planning_context.cpp
moveIt2_plugin/pcem_planner/tests/: CMakeLists.txt  test_pcem_motion_planner.cpp
planning_envs/: point3D_scene.xml  test_scene.xml
robot_files/: manipulation_scene.xml  robot_movable.xml
scripts/: kinodynamic_tracking.py  mbm_results.db  run_mpbenchmarks.sh  test_scene.py
toy/: 1d-demo.ipynb  pce_comparison.ipynb  pce_comprehensive.ipynb  pce_interactive.ipynb
toy/.ipynb_checkpoints/: pce_comparison-checkpoint.ipynb  pce_comprehensive-checkpoint.ipynb  pce_interactive-checkpoint.ipynb
