<?xml version="1.0"?>
<package format="2">
  <name>prox_ce_planner</name>
  <version>0.1.0</version>
  <description>ProxCE: Proximal Cross-Entropy Motion Planner for MoveIt</description>
  
  <maintainer email="hyu419@gatech.edu">Hongzhe Yu</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>class_loader</depend>
  <depend>eigen</depend>
  
  <export>
    <moveit_core plugin="${prefix}/prox_ce_planner_plugin.xml"/>
  </export>
</package>

