<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_planners_pcem</name>
  <version>2.10.0</version>
  <description>PCEM trajectory optimizer using MoveIt distance fields</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/pcem_planner_plugin_description.xml"/>
  </export>
</package>
