<?xml version="1.0"?>
<package format="2">
  <name>pce_motion_planner_tests</name>
  <version>1.0.0</version>
  <description>Tests for Proximal Cross-Entropy Motion Planner with MoveIt Integration (ROS 1 Noetic)</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>eigen</depend>
  <depend>pce_motion_planner</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

</package>
